Cleaning up some formatting in the quotes section of Ch3

--- a/index.html
+++ b/index.html
@@ -385,7 +385,9 @@
     }
 }
 \newcommand*{\extraIndent}[2][]{%
+    \begin{flushright}
     \-\hspace{3cm}#2
+    \end{flushright}
 }
 \begin{document}
 \pagestyle{mainmatter}
