More quote cleanup in ch3 & ch4. Adding in the  macro, correcting (agian) the  macro

--- a/index.html
+++ b/index.html
@@ -385,9 +385,18 @@
     }
 }
 \newcommand*{\extraIndent}[2][]{%
-    \begin{flushright}
+  {
+   \parskip=0pt
+   \begin{flushright}
     \-\hspace{3cm}#2
     \end{flushright}
+  }
+}
+\newcommand{\quotedDialog}[2][]{%
+   {
+   \parskip=0pt
+   #2
+   }
 }
 \begin{document}
 \pagestyle{mainmatter}
