Cleaned up errors in ch15 and added first image to the doc. Fixed page to warn in the problems field if there's an image

--- a/index.html
+++ b/index.html
@@ -350,6 +350,7 @@
     <div class="header">
 \documentclass[10pt]{book}
 \usepackage{color}
+\usepackage{graphicx}
 \usepackage{soul}
 \usepackage{titlesec}
 \usepackage[normalem]{ulem}
