Much modification of the ch25 formatting. More still needed

--- a/index.html
+++ b/index.html
@@ -351,6 +351,7 @@
 \documentclass[10pt]{book}
 \usepackage{color}
 \usepackage{graphicx}
+\usepackage{pifont}
 \usepackage{soul}
 \usepackage{titlesec}
 \usepackage[normalem]{ulem}
