--- a/index.html
+++ b/index.html
@@ -351,6 +351,7 @@
 \documentclass[10pt]{book}
 \usepackage{color}
 \usepackage{graphicx}
+\usepackage{scrextend}
 \usepackage{pifont}
 \usepackage{soul}
 \usepackage{titlesec}
@@ -416,6 +417,17 @@
    \\
    \noindent\textit{Date}:  ~#3
    }
+}
+\newcommand{\memoryScene}[2][] {
+ {
+ \parskip=0pt
+  \parindent=0pt
+  \leftmargin=5cm
+  \begin{addmargin}[3em]{0em}
+  ~\\
+  #2
+  \end{addmargin}
+ }
 }
 \begin{document}
 \pagestyle{mainmatter}
