More misc formatting cleanups

--- a/index.html
+++ b/index.html
@@ -429,6 +429,7 @@
   \end{addmargin}
  }
 }
+\renewcommand{\contentsname}{Session}
 \begin{document}
 \pagestyle{mainmatter}
 \renewcommand{\chaptermark}[1]{ \markboth{#1}{} }
