--- a/index.html
+++ b/index.html
@@ -349,6 +349,8 @@
     </div>
     <div class="header">
 \documentclass[10pt]{book}
+\usepackage{amsfonts}
+\usepackage{amssymb}
 \usepackage{color}
 \usepackage{graphicx}
 \usepackage{scrextend}
@@ -366,7 +368,7 @@
  % due to the folded nature of my printouts, and the failure to scale the paper correctly
  % the bottom and non-bound margins have extra space. The top and the bound margin
  % are expected to be the specified offsets here.
- bottom=2mm,
+ bottom=4mm,
  left=2mm,
  right=2mm,
  top=20mm,
@@ -432,6 +434,22 @@
   \end{addmargin}
  }
 }
+
+%\color[RGB]{204,0,0} % orig color
+%$\nsim$ Lackovich $\nsim$
+\newcommand{\jayaBrain}[2][]{{\color[RGB]{102,0,0}$\approx$#2$\approx$}}
+
+% $\supset$Carruthers$\subset$
+%\color[RGB]{230,145,56} %orig color
+\newcommand{\hayleyBrain}[2][]{{\color[RGB]{102,65,0}$\Supset$#2$\Subset$}}
+
+%\color[RGB]{106,168,79} % orig color
+\newcommand{\oliverBrain}[2][]{{\color[RGB]{64,102,48}$\sqsupset$#2$\sqsubset$}}
+
+%$\rightleftarrows$Signe$\leftrightarrows$
+%\color[RGB]{60,120,216} % orig color
+\newcommand{\jonahBrain}[2][]{{\color[RGB]{29,57,102}$\rightrightarrows$#2$\leftleftarrows$}}
+
 \renewcommand{\contentsname}{Session}
 \begin{document}
 \pagestyle{mainmatter}
